@@ -1,3 +1,8 @@
+2011-07-15  Borut Razem  <borutr@users.sourceforge.net>
+  * libgputils/gpprocessor.c: applied patch
+    #3544356 - "Incorrect lines in the gpprocessor.c",
+    thanks to Molnar Karoly
+
 2011-07-14  Borut Razem  <borutr@users.sourceforge.net>
   * libgputils/gpprocessor.c, lkr/16lf1786_g.lkr, lkr/16lf1787_g.lkr,
     lkr/16f1786_g.lkr, lkr/16f1787_g.lkr: applied patch
